Regression: Nodes: Hide Value option doesn't work on color sockets #110210

Closed
opened 2023-07-17 15:28:58 +02:00 by Nika Kutsniashvili · 0 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.40

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-17 01:05, hash: rB962c3cf6b190
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-16 00:15, hash: rBb03866288728

Short description of error
Color values are no longer hidden in node groups when enabling Hide Value for color sockets in node groups. They're shown regardless. I checked and this bug exists in 3.5 too, but values are hidden normally in 3.4

Exact steps for others to reproduce the error

  1. Make a node group in shader editor.
  2. create color socket in group inputs and check Hide Value.
  3. Color value will still be exposed on the node group node.
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.40 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-17 01:05, hash: `rB962c3cf6b190` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-16 00:15, hash: `rBb03866288728` **Short description of error** Color values are no longer hidden in node groups when enabling Hide Value for color sockets in node groups. They're shown regardless. I checked and this bug exists in 3.5 too, but values are hidden normally in 3.4 **Exact steps for others to reproduce the error** 1. Make a node group in shader editor. 2. create color socket in group inputs and check Hide Value. 3. Color value will still be exposed on the node group node.
Nika Kutsniashvili added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-17 15:28:59 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
Interest
User Interface
labels 2023-07-17 17:19:59 +02:00
Iliya Katushenock self-assigned this 2023-07-17 19:57:37 +02:00
Iliya Katushenock changed title from Shader Editor: Hide Value doesn't work on color sockets in node groups to Regression: Nodes: Hide Value option doesn't work on color sockets 2023-07-17 19:59:22 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-07-17 20:07:38 +02:00
Iliya Katushenock added
Priority
High
and removed
Priority
Normal
labels 2023-07-17 20:07:46 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-27 14:56:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110210
No description provided.