Fix #110210: Hide Value option doesn't work on color sockets

Regression caused by 70260960994d6cce3a33dfc16b4911a6cab9d4f2.
Original error introduced in 46fff97604ae167473ecd4c0cd9108dc20ba22e3.
Name hadling isn't problem of a declaration matching functions.

Pull Request: https://projects.blender.org/blender/blender/pulls/110225