source/blender/nodes/intern/node_socket_declarations.cc
@@ -347,12 +347,7 @@ bNodeSocket &Color::build(bNodeTree &ntree, bNode &node) const
 bool Color::matches(const bNodeSocket &socket) const
 {
   if (!this->matches_common_data(socket)) {
-    if (socket.name != this->name) {
-      return false;
-    }
-    if (socket.identifier != this->identifier) {
-      return false;
-    }
+    return false;
   }
   if (socket.type != SOCK_RGBA) {
     return false;
@@ -401,12 +396,7 @@ bNodeSocket &Rotation::build(bNodeTree &ntree, bNode &node) const
 bool Rotation::matches(const bNodeSocket &socket) const
 {
   if (!this->matches_common_data(socket)) {
-    if (socket.name != this->name) {
-      return false;
-    }
-    if (socket.identifier != this->identifier) {
-      return false;
-    }
+    return false;
   }
   if (socket.type != SOCK_ROTATION) {
     return false;
